# allegro-space-shooter

./: .gitignore  ATTRIBUTIONS.md  AppImage.desktop  Asteroids.desktop  CMakeLists.txt  LICENSE  Makefile  README.md  asteroids
ci/: appimage.sh
inc/: gun.h  main.h  physics.h  ship.h
lib/: liballegro.so.5.2  liballegro_font.so.5.2  liballegro_image.so.5.2  liballegro_primitives.so.5.2
src/: asteroids.c  asteroids.h  bullets.c  bullets.h  game.c  game.h  gun.c  gun.h  main.c  main.h  physics.c  physics.h  rectangle.h  ship.c  ship.h
